linking home page

--- a/reseller/templates/reseller/sellhome.html
+++ b/reseller/templates/reseller/sellhome.html
@@ -14,7 +14,7 @@
                 <div class="sidebar pe-4 pb-3">
                     <nav class="navbar">
                         <div class="navbar-nav w-100">
-                            <a href="{% url 'reseller:sellerlogin' %}" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Home</a>
+                            <a href="{% url 'reseller:sellerhome' %}" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Home</a>
                             <a href="" class="nav-item nav-link active"><i class="fa fa-th me-2"></i>Catalog</a>
                             <a href="{% url 'reseller:addproduct' %}" class="nav-item nav-link active"><i class="fa fa-keyboard me-2"></i>Add product</a>
                             <a href="" class="nav-item nav-link active"><i class="fa fa-table me-2"></i>Update stock</a>
