--- a/common/templates/common/homepage.html
+++ b/common/templates/common/homepage.html
@@ -12,34 +12,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-6">
-                <div class="container mt-5 pt-5 mb-5 pb-5">
-                    <div class="row">
-                        <div class="col-12 col-sm-8 col-md-6 m-auto">
-                            <div class="card shadow border">
-                                <div class="card-body">
-                                    <h3>CUSTOMER LOGIN</h3>
-                                </div>
-                                <form>
-                                    <div class="mb-3 text-center">
-                                        <input type="email" class="form-control my-2" placeholder="Email id" id="exampleInputEmail1" aria-describedby="emailHelp">
-                                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                                    </div>
-                                    <div class="mb-3 text-center">
-                                    <input type="password" class="form-control" placeholder="Password" id="exampleInputPassword1">
-                                    </div>
-                                    <div class="text-center mt-3">
-                                    <a href="{% url 'common:custlogin' %}"><button type="submit" class="btn btn-primary">LOGIN</button></a><BR>
-                                    <a href="#" class="nav-link text-primary">Forgot password?</a>
-                                    <a href="{% url 'common:custreg' %}" class="nav-link text-primary">Create an account?</a>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
+            <div class="col-12">
                 <div class="container mt-5 pt-5 mb-5 pb-5">
                     <div class="row">
                         <div class="col-12 col-sm-8 col-md-6 m-auto">
@@ -47,13 +20,14 @@
                                 <div class="card-body">
                                     <h3>SELLER LOGIN</h3>
                                 </div>
-                                <form>
-                                    <div class="mb-3 text-center">
-                                        <input type="email" class="form-control my-2" placeholder="Email id" id="exampleInputEmail1" aria-describedby="emailHelp">
-                                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                                <form method="POST">
+                                    {% csrf_token %}
+                                    {{msg}}
+                                    <div class="mb-3">
+                                        <input type="name" name='s_username' class="form-control" id="exampleFormControlInput1" placeholder="username">
                                     </div>
                                     <div class="mb-3 text-center">
-                                    <input type="password" class="form-control" placeholder="Password" id="exampleInputPassword1">
+                                    <input type="password" name="sell_password" class="form-control" placeholder="Password" id="exampleInputPassword1">
                                     </div>
                                     <div class="text-center mt-3">
                                         <a href="{% url 'common:selllogin' %}">
