--- a/reseller/templates/reseller/addprod.html
+++ b/reseller/templates/reseller/addprod.html
@@ -1,4 +1,4 @@
-{% extends 'reseller/selllogin.html' %}
+{% extends 'reseller/sellhome.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -16,26 +16,27 @@
         <div class="card shadow border">
             <div class="card-body">
                 <h3>ADD PRODUCT</h3>
-                <form>
+                <form method="POST" enctype = "multipart/form_data">
+                    {% csrf_token %}
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Product Name</label>
-                    <input type="name" class="form-control" id="exampleFormControlInput1">
+                    <input type="name" name='p_name' class="form-control" id="exampleFormControlInput1">
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Product Describtion</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <textarea class="form-control" name='p_description' id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Product Number</label>
-                    <input type="number" class="form-control" id="exampleFormControlInput1">
+                    <input type="number" name='p_number' class="form-control" id="exampleFormControlInput1">
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Current Stock</label>
-                    <input type="number" class="form-control" id="exampleFormControlInput1">
+                    <input type="number" name='current_stock' class="form-control" id="exampleFormControlInput1">
                 </div>
                 <div class="mb-3">
                     <label for="formFile" class="form-label">Product Image</label>
-                    <input class="form-control" type="file" id="formFile">
+                    <input class="form-control" name='p_name' type="file" id="formFile">
                     </div>
                     <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Price</label>
