--- a/customer/templates/customer/cart.html
+++ b/customer/templates/customer/cart.html
@@ -1,4 +1,5 @@
-{% extends 'customer/custlogin.html' %}
+{% extends 'customer/custhome.html' %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +11,16 @@
 </head>
 <body>
     {% block content %}
+    <div class="col-md-3 mt-3">
+        <div class="card" style="width: 18rem;">
+            <img src="{% static 'prodimg/strix.webp' %}" height="200px" width="200px" class="card-img-top" alt="">
+            <div class="card-body">
+              <h5 class="card-title">Lenovo Legion 7i Core i7 10th Gen</h5>
+              <a href="#" class="btn btn-primary">Buy Now</a>
+              <a href="#" class="btn btn-primary">Remove from cart</a>
+
+            </div>
+          </div>
     {% endblock %}
     
 </body>
