--- a/customer/templates/customer/pass.html
+++ b/customer/templates/customer/pass.html
@@ -1,4 +1,4 @@
-{% extends 'customer/custlogin.html' %}
+{% extends 'customer/custhome.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -11,9 +11,7 @@
 </head>
 <body>
     {% block content %}
-    <div class="container pt-5 pb-5">
-        <div class="row">
-            <div class="col-12 col-sm-8 col-md-6 m-auto">
+            <div class="col-10 col-sm-8 col-md-6 m-auto">
                 <div class="card shadow border">
                     <div class="card-body">
                         <h3>CHANGE PASSWORD</h3>
@@ -34,8 +32,6 @@
                     </div>        
                 </div>
             </div>
-        </div>
-    </div>
     {% endblock %}
     
 </body>
