--- a/customer/templates/customer/viewproduct.html
+++ b/customer/templates/customer/viewproduct.html
@@ -1,4 +1,5 @@
 {% extends 'customer/custhome.html' %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +11,20 @@
 </head>
 <body>
     {% block content %}
-    {% endblock %} 
+    <div class="col-3 mt-3">
+        <img src="{% static 'prodimg/strix.webp' %}" class="img-thumbnail" alt="...">
+    </div>
+    <div class="col-7 mt-3">
+        <h2>product name</h2>
+        <h2>product description</h2>
+        <h2>product price</h2>
+
+        <a href="#" class="btn btn-primary">Add to cart</a>
+        <a href="#" class="btn btn-primary">BuyNow</a>
+
+    </div>
+
+    {% endblock %}
+    
 </body>
 </html>
