--- a/reseller/templates/reseller/catlog.html
+++ b/reseller/templates/reseller/catlog.html
@@ -1,4 +1,5 @@
-{% extends 'customer/custhome.html' %}
+{% extends 'reseller/sellhome.html' %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +11,13 @@
 </head>
 <body>
     {% block content %}
-    {% endblock %} 
+        <div class="col-sm-10">
+            <h2>Welcome {{data.seller_name}}</h2>
+
+
+        </div>
+            
+    {% endblock %}
+    
 </body>
 </html>
