--- a/reseller/templates/reseller/pass.html
+++ b/reseller/templates/reseller/pass.html
@@ -1,4 +1,4 @@
-{% extends 'reseller/selllogin.html' %}
+{% extends 'reseller/sellhome.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -11,9 +11,7 @@
 </head>
 <body>
     {% block content %}
-    <div class="container pt-5 pb-5">
-        <div class="row">
-            <div class="col-12 col-sm-8 col-md-6 m-auto">
+            <div class="col-10 col-sm-8 col-md-6 m-auto">
                 <div class="card shadow border">
                     <div class="card-body">
                         <h3>CHANGE PASSWORD</h3>
@@ -30,12 +28,11 @@
                             <label for="exampleFormControlInput1" class="form-label">Confirm Password</label>
                             <input type="name" class="form-control" id="exampleFormControlInput1">
                         </div>
+                        <button type="submit" class="btn btn-primary">Change Password</button>
                         </form>
                     </div>        
                 </div>
             </div>
-        </div>
-    </div>
     {% endblock %}
     
 </body>
