--- a/reseller/templates/reseller/sellhome.html
+++ b/reseller/templates/reseller/sellhome.html
@@ -12,25 +12,29 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-2 bg-secondary">
-                <div class="sidebar pe-4 pb-3" style="height: 750px;">
+                <div class="sidebar pe-4 pb-3" style="height: 713px;">
                     <nav class="navbar">
                         <div class="navbar-nav w-100">
-                          <img src="" height="100px" width="100px" style="margin: auto;" alt="...">
+                            <div class="text-center">
+                                <img src="{% static 'sellimg/Pedri.webp' %}" style="height: 150px; width: 150px;" class="rounded mt-5 mb-5" alt="...">
+                            </div>
                             <a href="{% url 'reseller:sellerhome' %}" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Home</a>
-                            <a href="" class="nav-item nav-link active"><i class="fa fa-th me-2"></i>Catalog</a>
+                            <a href="{% url 'reseller:catlog' %}" class="nav-item nav-link active"><i class="fa fa-th me-2"></i>Catalog</a>
                             <a href="{% url 'reseller:addproduct' %}" class="nav-item nav-link active"><i class="fa fa-keyboard me-2"></i>Add product</a>
-                            <a href="" class="nav-item nav-link active"><i class="fa fa-table me-2"></i>Update stock</a>
-                            <a href="" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>current stock</a>
+                            <a href="{% url 'reseller:updatestock' %}" class="nav-item nav-link active"><i class="fa fa-table me-2"></i>Update stock</a>
+                            <a href="{% url 'reseller:currentstock' %}" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Current stock</a>
+                            <a href="{% url 'reseller:sellerpass' %}" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Change password</a>
+                            <a href="" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Logout</a>
                         </div>
                     </nav>
                 </div>
             </div>
             {% block content %}
-             <div class="col-10">
-            <h2>Welcome {{data.seller_name}}</h2>
+            <div class="col-sm-10">
+                <h2>Welcome {{data.seller_name}}</h2>
 
 
-             </div>
+            </div>
             
             {% endblock %}
         </div>
