--- a/prodseller/templates/prodseller/addprod.html
+++ b/prodseller/templates/prodseller/addprod.html
@@ -1,30 +1,21 @@
-{% extends 'reseller/sellhome.html' %}
+{% extends 'prodseller/sellhome.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
-</head>
-<body>
-    {% block content %}
-    <div class="col-10 col-sm-8 col-md-6 m-auto">
-        <div class="card shadow border">
-            <div class="card-body">
-                <h3>ADD PRODUCT</h3>
-                <form method="POST" enctype = 'multipart/form-data'>
-                    {% csrf_token %} 
+{% block content %}
+<div class="col-10 col-sm-8 col-md-6 m-auto">
+    <div class="card shadow border">
+        <div class="card-body">
+            <h3>ADD PRODUCT</h3>
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{msg}}
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Product Name</label>
                     <input type="name" name='p_name' class="form-control" id="exampleFormControlInput1">
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Product Describtion</label>
-                    <textarea class="form-control" name='p_description' id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <textarea class="form-control" name='p_description' id="exampleFormControlTextarea1"
+                        rows="3"></textarea>
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Product Number</label>
@@ -42,12 +33,9 @@
                     <label for="exampleFormControlInput1" class="form-label">Price</label>
                     <input type="number" name='price' class="form-control" id="exampleFormControlInput1">
                 </div>
-                    <button type="submit" class="btn btn-primary">Add Product</button>
-                </form>
-            </div>        
+                <button type="submit" class="btn btn-primary">Add Product</button>
+            </form>
         </div>
     </div>
-    {% endblock %}
-    
-</body>
-</html>
+</div>
+{% endblock %}
