--- a/prodseller/templates/prodseller/sellhome.html
+++ b/prodseller/templates/prodseller/sellhome.html
@@ -16,14 +16,14 @@
                     <nav class="navbar">
                         <div class="navbar-nav w-100">
                             <div class="text-center">
-                                <img src="{% static 'sellimg/Pedri.webp' %}" style="height: 150px; width: 150px;" class="rounded mt-5 mb-5" alt="...">
+                                <img src="{{data.sell_pic.url}}" style="height: 150px; width: 150px;" class="rounded mt-5 mb-5" alt="...">
                             </div>
-                            <a href="{% url 'reseller:sellerhome' %}" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Home</a>
-                            <a href="{% url 'reseller:catlog' %}" class="nav-item nav-link active"><i class="fa fa-th me-2"></i>Catalog</a>
-                            <a href="{% url 'reseller:addproduct' %}" class="nav-item nav-link active"><i class="fa fa-keyboard me-2"></i>Add product</a>
-                            <a href="{% url 'reseller:updatestock' %}" class="nav-item nav-link active"><i class="fa fa-table me-2"></i>Update stock</a>
-                            <a href="{% url 'reseller:currentstock' %}" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Current stock</a>
-                            <a href="{% url 'reseller:sellerpass' %}" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Change password</a>
+                            <a href="{% url 'prodseller:sellerhome' %}" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Home</a>
+                            <a href="{% url 'prodseller:catlog' %}" class="nav-item nav-link active"><i class="fa fa-th me-2"></i>Catalog</a>
+                            <a href="{% url 'prodseller:addproduct' %}" class="nav-item nav-link active"><i class="fa fa-keyboard me-2"></i>Add product</a>
+                            <a href="{% url 'prodseller:updatestock' %}" class="nav-item nav-link active"><i class="fa fa-table me-2"></i>Update stock</a>
+                            <a href="{% url 'prodseller:currentstock' %}" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Current stock</a>
+                            <a href="{% url 'prodseller:sellerpass' %}" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Change password</a>
                             <a href="" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Logout</a>
                         </div>
                     </nav>
