--- a/customer/templates/customer/pass.html
+++ b/customer/templates/customer/pass.html
@@ -5,19 +5,26 @@
         <div class="card shadow border">
             <div class="card-body">
                 <h3>CHANGE PASSWORD</h3>
-                <form>
+                <form method="POST">
+                    {% csrf_token %}
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Cureent Passwoed</label>
-                    <input type="name" class="form-control" id="exampleFormControlInput1">
+                    <input type="name" name="current_pass" class="form-control" id="exampleFormControlInput1">
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">New Password</label>
-                    <input type="name" class="form-control" id="exampleFormControlInput1">
+                    <input type="name" name="new_pass" class="form-control" id="exampleFormControlInput1">
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Confirm Password</label>
-                    <input type="name" class="form-control" id="exampleFormControlInput1">
+                    <input type="name" name="confirm_pass" class="form-control" id="exampleFormControlInput1">
                 </div>
+                <div class="mb-3">
+                     <button type="submit">Change</button>
+                    
+                </div>
+                {{msg}}
+
                 </form>
             </div>        
         </div>
