--- a/customer/templates/customer/viewproduct.html
+++ b/customer/templates/customer/viewproduct.html
@@ -2,16 +2,19 @@
 {% load static %}
 {% block content %}
     <div class="col-3 mt-3">
-        <img src="{% static 'prodimg/strix.webp' %}" class="img-thumbnail" alt="...">
+        <img src="{{details.product_image.url}}" class="img-thumbnail" alt="...">
     </div>
     <div class="col-7 mt-3">
-        <h2>product name</h2>
-        <h3>product description</h3>
-        <h4>product price</h4>
+        <form method = "POST">
+            {% csrf_token %}
+        <h2>{{details.product_name}}</h2>
+        <h3>{{details.product_description}}</h3>
+        <h4>RS {{details.price}}</h4>
 
-        <a href="#" class="btn btn-primary">Add to cart</a>
-        <a href="#" class="btn btn-primary">BuyNow</a>
+        <button type="submit" class="btn btn-primary">Add to cart</button>
+        {{msg}}
 
+        </form
     </div>
 
 {% endblock %}
