--- a/common/templates/common/custlogin.html
+++ b/common/templates/common/custlogin.html
@@ -8,9 +8,49 @@
     <title>Document</title>
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
 <body>
-    <div class="container">
+    <section class="form my-4 mx-5">
+        <div class="container">
+            <div class="row no-gutters border shadow">
+                <div class="col-lg-5">
+                    <img src="{% static 'custimg/ecommerce.png' %}" class="img-fluid" alt="">
+                </div>
+                <div class="col-lg-7">
+                    <h1 class="col-lg-7 px-5 pt-5">CUSTOMER</h1>
+                    <form method="POST">
+                        {% csrf_token %}
+                        {{custmsg}}
+                        <div class="from-row">
+                            <div class="col-lg-7">
+                                <input type="email" name='c_email' placeholder="Email-Address" class="form-control my-3 p-4">
+                            </div>
+                        </div>
+                        <div class="from-row">
+                            <div class="col-lg-7">
+                                <input type="password"  name="cust_password" placeholder="*******" class="form-control my-3 p-4">
+                            </div>
+                        </div>
+                        <div class="from-row">
+                            <div class="col-lg-7">
+                                <a href="{% url 'common:selllogin' %}">
+                                <button type="submit" class="btn1 mt-3 mb-5">Login</button>
+                            </a>
+                            </div>
+                        </div>
+                        <a href="#" style="text-decoration: none;">Forgot password</a>
+                        <p>Don't have an account? <a href="{% url 'common:custreg' %}" style="text-decoration: none;">Register here</a></p>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <!-- {% comment %} <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="container mt-5 pt-5 mb-5 pb-5">
@@ -43,6 +83,6 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> {% endcomment %} -->
 </body>
 </html>
