--- a/common/templates/common/custreg.html
+++ b/common/templates/common/custreg.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
+<style>
+    .btn1{
+    border: none;
+    outline: none;
+    height: 50px;
+    width: 100%;
+    background-color: #fb3531;
+    color: white;
+    border-radius: 4px;
+    font-weight: bold;
+}
+</style>
 </head>
 <body>  
     <div class="container pt-5 pb-5">
@@ -50,7 +62,8 @@
                             <label for="exampleInputPassword1" class="form-label">Password</label>
                             <input type="password" name="c_password" class="form-control" id="exampleInputPassword1">
                             </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn1">Submit</button>
+                            <a href="{% url 'common:custlogin' %}" style="text-decoration: none;">Already have an account?</a>
                         </form>
                     </div>        
                 </div>
