--- a/common/templates/common/sellreg.html
+++ b/common/templates/common/sellreg.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<style>
+    .btn1{
+    border: none;
+    outline: none;
+    height: 50px;
+    width: 100%;
+    background-color: #fb3531;
+    color: white;
+    border-radius: 4px;
+    font-weight: bold;
+}
+</style>
 </head>
 <body>
     <div class="container">
@@ -72,15 +84,8 @@
                                         <label for="formFile" class="form-label">Seller Image</label>
                                         <input class="form-control" name="s_image" type="file" id="formFile">
                                         </div>
-                                        <!-- <div class="mb-3">
-                                            <label for="exampleFormControlInput1" name="username" class="form-label">username</label>
-                                            <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="username">
-                                        </div>
-                                        <div class="mb-3">
-                                            <label for="exampleFormControlInput1" name="pass" class="form-label">Password</label>
-                                            <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="password">
-                                        </div> -->
-                                      <button type="submit" class="btn btn-primary">Submit</button>
+                                      <button type="submit" class="btn1">Submit</button>
+                                      <a href="{% url 'common:selllogin' %}" style="text-decoration: none;">Already have an account?</a>
                                     </form>
                                 </div>        
                             </div>
