--- a/customer/templates/customer/custhome.html
+++ b/customer/templates/customer/custhome.html
@@ -9,44 +9,54 @@
   <title>Document</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'css/card.css' %}">
+  <link rel="stylesheet" href="{% static 'css/viewprod.css' %}">
 </head>
 
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-2 bg-secondary">
-        <div class="sidebar pe-4 pb-3" style="height: 713px;">
+      <div class=" side col-sm-2 border shadow" style="height: 58rem;">
+        <div class="sidebar">
           <nav class="navbar">
-            <div class="navbar-nav w-100">
-              <a href="{% url 'customer:custhome' %}" class="nav-item nav-link active"><i
+            <div class="navbar-nav">
+              <a href="{% url 'customer:custhome' %}" class="nav-item nav-link active text-white"><i
                   class="fa fa-tachometer-alt me-2"></i>Home</a>
-              <a href="{% url 'customer:custcart' %}" class="nav-item nav-link active"><i
+              <a href="{% url 'customer:custcart' %}" class="nav-item nav-link active text-white"><i
                   class="fa fa-th me-2"></i>Cart</a>
-              <a href="{% url 'customer:custorder' %}" class="nav-item nav-link active"><i
+              <a href="{% url 'customer:custorder' %}" class="nav-item nav-link active text-white"><i
                   class="fa fa-keyboard me-2"></i>Order</a>
-              <a href="{% url 'customer:custpass' %}" class="nav-item nav-link active"><i
+              <a href="{% url 'customer:custpass' %}" class="nav-item nav-link active text-white"><i
                   class="fa fa-chart-bar me-2"></i>Change password</a>
-              <a href="" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Logout</a>
+              <a href="" class="nav-item nav-link active text-white"><i class="fa fa-chart-bar me-2"></i>Logout</a>
             </div>
           </nav>
         </div>
       </div>
       {% block content %}
-      <div class="col-md-10">
+      <div class="col-sm-10">
         <div class="row">
           {% for product in prods %}
-          <div class="col-4 mt-3">
-            <div class="card h-100" style="width: 18rem;">
-              <img src="{{product.product_image.url}}" style="height: 12rem;" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">{{product.product_name|title}}</h5>
-                <p class="card-text">{{product.product_description}}</p>
-               <p>seller:{{product.seller.seller_name|title}}</p>
-               <a href="{% url 'customer:viewproduct' product.id %}" class="btn btn-primary" style="text-decoration: none;"> Details</a>
+          <div class="col-md-4 mt-3">
+            <div class="card shadow border mt-3">
+              <div class="product align-items-center p-2 text-center">
+                <img src="{{product.product_image.url}}" alt="" class="rounded" width="160" height="140">
+                <h5>{{product.product_name|title}}</h5>
+              </div>
+              <div class="mt-3 info text-center">
+                <span class="text d-block">{{product.product_description}}</span>
+              </div>
+              <div class="seller mt-3">
+                <h6>Seller:{{product.seller.seller_name|title}}</h6>
+              </div>
+              <div class="cost mt-3 text-dark text-center">
+                <span>{{product.price}}</span>
+              </div>
+              <div class="p-3 sheo text-center text-white mt-3 cursor">
+                <a href="{% url 'customer:viewproduct' product.id %}">DETAILS</a>
               </div>
             </div>
           </div>
-          
           {% endfor %}
 
         </div>
