--- a/ecom_admin/templates/ecomadmin/adminhome.html
+++ b/ecom_admin/templates/ecomadmin/adminhome.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,12 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static 'css/admin.css' %}">
+<style>
+  .navbar{
+    background-color:#fb3531 ;
+}
+.btn2{
+  border: none;
+  outline: none;
+  height: 50px;
+  width: 100%;
+  background-color: #fb3531;
+  color: white;
+  border-radius: 4px;
+  font-weight: bold;
+}
+</style>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-sm-12">
         <div class="row">
             <div class="col-sm-12">
-                <nav class="navbar bg-dark">
+                <nav class="navbar">
                     <div class="container-fluid">
                       <a class="navbar-brand text-white" href=""><h3>ADMIN</h3></a>
                       <div class="d-flex text-white">
