--- a/ecom_admin/templates/ecomadmin/custview.html
+++ b/ecom_admin/templates/ecomadmin/custview.html
@@ -8,9 +8,8 @@
 
 <div class="container">
     <div class="row">
-
-        <div class="">
-            <table class="table">
+        <div class="col-lg-12">
+            <table class="table table-dark table-striped text-center">
                 <thead>
                     <th>Customer Name</th>
                     <th>Email</th>
@@ -22,7 +21,7 @@
                 </thead>
                 <tbody>
                     {% for customer in customer_list %}
-                    <tr class="table-active">
+                    <tr>
                         <td>{{customer.Customer_name|upper}}</td>
                         <td>{{customer.Email_address}}</td>
                         <td>{{customer.Address}}</td>
