--- a/ecom_admin/templates/ecomadmin/pass.html
+++ b/ecom_admin/templates/ecomadmin/pass.html
@@ -5,11 +5,11 @@
     <div class="row">
         <div class="col-12 col-sm-8 col-md-6 m-auto">
             <div class="card shadow border">
-                <div class="card-body">
+                <div class="card-body w-100">
                     <h3>CHANGE PASSWORD</h3>
                     <form>
                         <div class="mb-3">
-                            <label for="exampleFormControlInput1" class="form-label">Cureent Passwoed</label>
+                            <label for="exampleFormControlInput1" class="form-label">Current Password</label>
                             <input type="name" class="form-control" id="exampleFormControlInput1">
                         </div>
                         <div class="mb-3">
@@ -20,6 +20,9 @@
                             <label for="exampleFormControlInput1" class="form-label">Confirm Password</label>
                             <input type="name" class="form-control" id="exampleFormControlInput1">
                         </div>
+                        <div class="mb-3">
+                            <button type="submit" class="btn2">Change</button>   
+                       </div>
                     </form>
                 </div>
             </div>
