--- a/prodseller/templates/prodseller/addprod.html
+++ b/prodseller/templates/prodseller/addprod.html
@@ -1,41 +1,48 @@
 {% extends 'prodseller/sellhome.html' %}
 {% load static %}
 {% block content %}
-<div class="col-10 col-sm-8 col-md-6 m-auto">
-    <div class="card shadow border">
-        <div class="card-body">
-            <h3>ADD PRODUCT</h3>
-            <form method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{msg}}
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Product Name</label>
-                    <input type="name" name='p_name' class="form-control" id="exampleFormControlInput1">
+<div class="col-sm-10">
+        <div class="row">
+            <div class="col-sm-8 m-auto">
+                <div class="card shadow border">
+                    <div class="card-body w-100">
+                        <h3>ADD PRODUCT</h3>
+                        <form method="POST" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            {{msg}}
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Product Name</label>
+                                <input type="name" name='p_name' class="form-control" id="exampleFormControlInput1">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleFormControlTextarea1" class="form-label">Product Describtion</label>
+                                <textarea class="form-control" name='p_description' id="exampleFormControlTextarea1"
+                                    rows="3"></textarea>
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Product Number</label>
+                                <input type="number" name='p_number' class="form-control" id="exampleFormControlInput1">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Current Stock</label>
+                                <input type="number" name='current_stock' class="form-control" id="exampleFormControlInput1">
+                            </div>
+                            <div class="mb-3">
+                                <label for="formFile" class="form-label">Product Image</label>
+                                <input class="form-control" name='p_image' type="file" id="formFile">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Price</label>
+                                <input type="number" name='price' class="form-control" id="exampleFormControlInput1">
+                            </div>
+                            <button type="submit" class="btn2">Add Product</button>
+                        </form>
+                    </div>
                 </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Product Describtion</label>
-                    <textarea class="form-control" name='p_description' id="exampleFormControlTextarea1"
-                        rows="3"></textarea>
-                </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Product Number</label>
-                    <input type="number" name='p_number' class="form-control" id="exampleFormControlInput1">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Current Stock</label>
-                    <input type="number" name='current_stock' class="form-control" id="exampleFormControlInput1">
-                </div>
-                <div class="mb-3">
-                    <label for="formFile" class="form-label">Product Image</label>
-                    <input class="form-control" name='p_image' type="file" id="formFile">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Price</label>
-                    <input type="number" name='price' class="form-control" id="exampleFormControlInput1">
-                </div>
-                <button type="submit" class="btn btn-primary">Add Product</button>
-            </form>
+            </div>
         </div>
     </div>
 </div>
+
+    
 {% endblock %}
