--- a/prodseller/templates/prodseller/catlog.html
+++ b/prodseller/templates/prodseller/catlog.html
@@ -1,8 +1,35 @@
 {% extends 'prodseller/sellhome.html' %}
 {% load static %}
 {% block content %}
+<div class="col-sm-10">
+    <div class="row">
+      {% for product in products %}
+      <div class="col-md-4 mt-3">
+        <div class="card shadow border mt-3">
+          <div class="product align-items-center p-2 text-center">
+            <img src="{{product.product_image.url}}" alt="" class="rounded" width="160" height="140">
+            <h5>{{product.product_name|title}}</h5>
+          </div>
+          <div class="mt-3 info text-center">
+            <span class="text d-block">{{product.product_description}}</span>
+          </div>
+          <div class="seller mt-3">
+            <h6>Seller:{{product.seller.seller_name|title}}</h6>
+          </div>
+          <div class="cost mt-3 text-dark text-center">
+            <span>{{product.price}}</span>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
 
-<div class="col-md-10">
+    </div>
+  </div>
+
+</div>
+</div>
+
+{% comment %} <div class="col-md-10">
     <div class="row">
 
         {% for product in products %}
@@ -20,6 +47,6 @@
         {% endfor %}
 
     </div>
-</div>
+</div> {% endcomment %}
 
 {% endblock %}
