--- a/prodseller/templates/prodseller/pass.html
+++ b/prodseller/templates/prodseller/pass.html
@@ -3,11 +3,11 @@
 {% block content %}
 <div class="col-10 col-sm-8 col-md-6 m-auto">
     <div class="card shadow border">
-        <div class="card-body">
+        <div class="card-body w-100">
             <h3>CHANGE PASSWORD</h3>
             <form>
                 <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Cureent Passwoed</label>
+                    <label for="exampleFormControlInput1" class="form-label">Current Password</label>
                     <input type="name" class="form-control" id="exampleFormControlInput1">
                 </div>
                 <div class="mb-3">
@@ -18,7 +18,7 @@
                     <label for="exampleFormControlInput1" class="form-label">Confirm Password</label>
                     <input type="name" class="form-control" id="exampleFormControlInput1">
                 </div>
-                <button type="submit" class="btn btn-primary">Change Password</button>
+                <button type="submit" class="btn2">Change Password</button>
             </form>
         </div>
     </div>
