--- a/prodseller/templates/prodseller/sellhome.html
+++ b/prodseller/templates/prodseller/sellhome.html
@@ -7,11 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static 'css/card.css' %}">
+<style>
+    .btn2{
+        border: none;
+        outline: none;
+        height: 50px;
+        width: 100%;
+        background-color: #fb3531;
+        color: white;
+        border-radius: 4px;
+        font-weight: bold;
+    }
+</style>
 </head>
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-2 bg-secondary">
+            <div class="side col-sm-2">
                 <div class="sidebar pe-4 pb-3" style="height: 713px;">
                     <nav class="navbar">
                         <div class="navbar-nav w-100">
