--- a/common/templates/common/custreg.html
+++ b/common/templates/common/custreg.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <style>
     .btn1{
@@ -31,11 +32,12 @@
                             {% csrf_token %}
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">Name</label>
-                            <input type="name" name="c_name" class="form-control" id="exampleFormControlInput1" placeholder="name">
+                            <input type="text" name="c_name" class="form-control" id="exampleFormControlInput1" placeholder="name">
                         </div>
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                            <input type="email" name="c_email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                            <input type="email" name="c_email" class="form-control" id="email" placeholder="name@example.com">
+                            <span id="email_error"></span>
                         </div>
                         <div class="mb-3">
                             <label for="exampleFormControlTextarea1" class="form-label">Adress</label>
@@ -70,5 +72,46 @@
             </div>
         </div>
     </div>
+
+    <script>
+        $('#email').change(function(){
+            $.ajaxSetup({  
+            headers: {
+              "X-CSRFToken": $('[name=csrfmiddlewaretoken]').val() //passing csrf_token in ajax request
+            }
+        })
+
+            $.ajax({
+
+                url:'{% url "common:email_exist" %}', //url in which ajax call is made
+                type:'POST', // method in which data is send
+                
+                data:{
+                    email:$(this).val() //sending data in json format here key is email
+                },
+                success:function(response){
+                    var email_error = $('#email_error')
+                    var email = $('#email')
+
+
+                    if(response.status == true){
+                        $('#email_error').html('Email already exist').css('color','red')
+                        $('#email').css('border','2px solid red')
+                    }
+                    else{
+                        $('#email_error').html('Success').css('color','green')
+                        $('#email').css('border','2px solid green')
+
+
+                    }
+
+                    console.log(response.status)
+                }
+
+            })
+
+        })
+
+    </script>
 </body>
 </html>
