--- a/customer/templates/customer/cart.html
+++ b/customer/templates/customer/cart.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block content %}
 <div class="col-md-10 mt-3">
+  {% if cart_list %}
   <table class="table table-dark table-striped text-center">
     <tr>
       <th>ProductName</th>
@@ -10,6 +11,7 @@
       <th>CurrentStock</th>
       <th>ProductImage</th>
       <th>ProductPrice</th>
+      <th>Action</th>
     </tr>
       {% for cart in cart_list %}
     <tr>
@@ -18,11 +20,20 @@
       <td>{{cart.product.product_number}}</td>
       <td>{{cart.product.current_stock}}</td>
       <td>
-      <img src=" {{cart.product.product_image.url}}" style="height: 50px; width: 50px;" class="rounded mt-5 mb-5" alt="...">
+      <img src=" {{cart.product.product_image.url}}" style="height: 50px; width: 50px;" class="rounded" alt="...">
       </td>
       <td>{{cart.product.price}}</td>
+      <td><button class="btn btn-danger">
+        <a href="{% url 'customer:remove_cart' cart.product.id %}" style="color: aliceblue; text-decoration: none;">REMOVE</a>
+      </button></td>
     </tr>
     {% endfor %}
   </table>
+  {% else %}
+<div class="cart1 text-center">
+  <h1>Cart Empty</h1>
+</div>
+
+  {% endif %}
 </div>
 {% endblock %}
