--- a/ecom_admin/templates/ecomadmin/custview.html
+++ b/ecom_admin/templates/ecomadmin/custview.html
@@ -9,8 +9,8 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-            <table class="table table-dark table-striped text-center">
-                <thead>
+            <table class="table table-dark table-striped text-center border shadow">
+                <tr>
                     <th>Customer Name</th>
                     <th>Email</th>
                     <th>Address</th>
@@ -18,19 +18,17 @@
                     <th>Gender</th>
                     <th>Password</th>
 
-                </thead>
-                <tbody>
-                    {% for customer in customer_list %}
-                    <tr>
-                        <td>{{customer.Customer_name|upper}}</td>
-                        <td>{{customer.Email_address}}</td>
-                        <td>{{customer.Address}}</td>
-                        <td>{{customer.Phone_number}}</td>
-                        <td>{{customer.Gender}}</td>
-                        <td>{{customer.Cust_password}}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
+                </tr>
+                {% for customer in customer_list %}
+                <tr>
+                    <td>{{customer.customer_name|upper}}</td>
+                    <td>{{customer.email_address}}</td>
+                    <td>{{customer.address}}</td>
+                    <td>{{customer.phone_number}}</td>
+                    <td>{{customer.gender}}</td>
+                    <td>{{customer.cust_password}}</td>
+                </tr>
+                {% endfor %}
             </table>
         </div>
     </div>
