--- a/ecom_admin/templates/ecomadmin/sellapprove.html
+++ b/ecom_admin/templates/ecomadmin/sellapprove.html
@@ -8,8 +8,8 @@
     <div class="row">
 
         <div class="col-sm-12">
-            <table class="table table-dark table-striped text-center">
-                <thead>
+            <table class="table table-dark table-striped text-center  border shadow">
+                <tr>
                     <th>Seller Name</th>
                     <th>Email</th>
                     <th>Address</th>
@@ -22,29 +22,36 @@
                     <th>Account Number</th>
                     <th>Status</th>
                     <th>Action</th>
-                </thead>
-                <tbody>
-            {% for seller in seller_app %}
-          <tr>
-            <td>{{seller.seller_name|upper}}</td>
-            <td>{{seller.seller_email}}</td>
-            <td>{{seller.Address}}</td>
-            <td>{{seller.Phone_number}}</td>
-            <td>{{seller.Gender}}</td>
-            <td>{{seller.comp_name}}</td>
-            <td>{{seller.accholder_name}}</td>
-            <td>{{seller.ifsc}}</td>
-            <td>{{seller.branch}}</td>
-            <td>{{seller.acc_number}}</td>
-            <td><button type="button" class="btn btn-primary">approve</button></td>
-            <td><button type="button" class="btn btn-danger">remove</button></td>
-          </tr>
-          {% endfor %}
-                    <tr>
-                        
-                        
-                    </tr>
-                </tbody>
+                </tr>
+                {% for seller in seller_app %}
+                <tr>
+
+                    <td>{{seller.seller_name|upper}}</td>
+                    <td>{{seller.seller_email}}</td>
+                    <td>{{seller.address}}</td>
+                    <td>{{seller.phone_number}}</td>
+                    <td>{{seller.gender}}</td>
+                    <td>{{seller.comp_name}}</td>
+                    <td>{{seller.accholder_name}}</td>
+                    <td>{{seller.ifsc}}</td>
+                    <td>{{seller.branch}}</td>
+                    <td>{{seller.acc_number}}</td>
+                    <td>
+                        {% if not seller.approved %}
+                        <button class="btn btn-primary"><a href="{% url 'ecome_admin:approve' seller.id %}"
+                                style="color: aliceblue;text-decoration: none;">APPROVE</a></button>
+
+                        {% else %}
+                        <p style="color: gray;"><b>APPROVED</b></p>
+                        {% endif %}
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-danger">
+                            <a href="{% url 'ecome_admin:deletesell' seller.id %}" style="color: aliceblue;text-decoration: none;">REMOVE</a>
+                        </button>
+                    </td>
+                </tr>
+                {% endfor %}
             </table>
         </div>
 
