--- a/ecom_admin/templates/ecomadmin/sellerview.html
+++ b/ecom_admin/templates/ecomadmin/sellerview.html
@@ -7,7 +7,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-12">
-      <table class="table table-dark table-striped text-center">
+      <table class="table table-dark table-striped text-center  border shadow">
         <thead>
           <th>Seller Name</th>
           <th>Email</th>
@@ -25,9 +25,9 @@
           <tr>
             <td>{{seller.seller_name|upper}}</td>
             <td>{{seller.seller_email}}</td>
-            <td>{{seller.Address}}</td>
+            <td>{{seller.address}}</td>
             <td>{{seller.Phone_number}}</td>
-            <td>{{seller.Gender}}</td>
+            <td>{{seller.gender}}</td>
             <td>{{seller.comp_name}}</td>
             <td>{{seller.accholder_name}}</td>
             <td>{{seller.ifsc}}</td>
