--- a/prodseller/templates/prodseller/pass.html
+++ b/prodseller/templates/prodseller/pass.html
@@ -5,22 +5,24 @@
     <div class="card shadow border">
         <div class="card-body w-100">
             <h3>CHANGE PASSWORD</h3>
-            <form>
+            <form method='POST'>
+                {% csrf_token %}
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Current Password</label>
-                    <input type="name" class="form-control" id="exampleFormControlInput1">
+                    <input type="name" name='current_pass' class="form-control" id="exampleFormControlInput1">
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">New Password</label>
-                    <input type="name" class="form-control" id="exampleFormControlInput1">
+                    <input type="name" name='new_pass' class="form-control" id="exampleFormControlInput1">
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Confirm Password</label>
-                    <input type="name" class="form-control" id="exampleFormControlInput1">
+                    <input type="name" name='confirm_pass' class="form-control" id="exampleFormControlInput1">
                 </div>
                 <button type="submit" class="btn2">Change Password</button>
             </form>
         </div>
+        {{msg}}
     </div>
 </div>
 {% endblock %}
