--- a/prodseller/templates/prodseller/sellhome.html
+++ b/prodseller/templates/prodseller/sellhome.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <link rel="stylesheet" href="{% static 'css/card.css' %}">
 <style>
@@ -29,7 +30,10 @@
                     <nav class="navbar">
                         <div class="navbar-nav w-100">
                             <div class="text-center">
-                                <img src="{{data.sell_pic.url}}" style="height: 150px; width: 150px;" class="rounded mt-5 mb-5" alt="...">
+                                <img src="{{data.sell_pic.url}}" style="height: 100px; width: 100px;border-radius: 50%;" class="mt-1" alt="...">
+                                <div class="mb-5">
+                                    <span><b>{{data.seller_name}}</b></span>
+                                </div>
                             </div>
                             <a href="{% url 'prodseller:sellerhome' %}" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Home</a>
                             <a href="{% url 'prodseller:catlog' %}" class="nav-item nav-link active"><i class="fa fa-th me-2"></i>Catalog</a>
@@ -37,14 +41,14 @@
                             <a href="{% url 'prodseller:updatestock' %}" class="nav-item nav-link active"><i class="fa fa-table me-2"></i>Update stock</a>
                             <a href="{% url 'prodseller:currentstock' %}" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Current stock</a>
                             <a href="{% url 'prodseller:sellerpass' %}" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Change password</a>
-                            <a href="" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Logout</a>
+                            <a href="{% url 'common:selllogin' %}" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Logout</a>
                         </div>
                     </nav>
                 </div>
             </div>
             {% block content %}
             <div class="col-sm-10">
-                <h2>Welcome {{data.seller_name}}</h2>
+                <h2>Welcome</h2>
 
 
             </div>
