--- a/prodseller/templates/prodseller/updatestock.html
+++ b/prodseller/templates/prodseller/updatestock.html
@@ -1,10 +1,66 @@
 {% extends 'prodseller/sellhome.html' %}
 {% load static %}
 {% block content %}
-<div class="col-sm-10">
-    <h2>Welcome</h2>
+    <div class="col-10 col-sm-8 col-md-6 m-auto">
+        <div class="card shadow border">
+            <div class="card-body w-100">
+                <h3>UPDATE STOCK</h3>
+                <form method='POST'>
+                    {% csrf_token %}
+                    <input type="text" hidden id="p_id" name="productid">
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">Product Number</label>
+                        <select name="" id="productno">
+                            <option  disabled selected>Select Product</option>
+                            {% for product in prod_data %}
+                            <option value="{{product.id}}">{{product.product_number}}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">Product Name</label>
+                        <input type="name" name='' class="form-control" id="p_name">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">current stock</label>
+                        <input type="name" name='' readonly class="form-control" id="c_stock">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">new stock</label>
+                        <input type="name" name='new_stock' class="form-control" id="n_stock">
+                    </div>
+                    <button type="submit" class="btn2">Update stock</button>
+                </form>
+            </div>
+        </div>
+    </div>
 
 
 </div>
+<script>
+$('#productno').change(function(){
+    $.ajaxSetup({  
+    headers: {
+      "X-CSRFToken": $('[name=csrfmiddlewaretoken]').val()
+    }
+})
+
+    $.ajax({
+        url:'{% url "prodseller:getstock" %}', 
+        type:'POST', 
+        data:{
+            id:$(this).val() 
+        },
+        success:function(response){
+            $('#p_name').val(response.p_name)
+            $('#c_stock').val(response.stock)
+            $('#p_id').val(response.p_id)
+
+        }
+    })
+
+})
+
+</script>
 
 {% endblock %}
