--- a/customer/templates/customer/custhome.html
+++ b/customer/templates/customer/custhome.html
@@ -30,7 +30,7 @@
                   class="fa fa-keyboard me-2"></i>Order</a>
               <a href="{% url 'customer:custpass' %}" class="nav-item nav-link active text-white"><i
                   class="fa fa-chart-bar me-2"></i>Change password</a>
-              <a href="{% url 'common:custlogin' %}" class="nav-item nav-link active text-white"><i class="fa fa-chart-bar me-2"></i>Logout</a>
+              <a href="{% url 'customer:logout' %}" class="nav-item nav-link active text-white"><i class="fa fa-chart-bar me-2"></i>Logout</a>
             </div>
           </nav>
         </div>
