--- a/prodseller/templates/prodseller/sellhome.html
+++ b/prodseller/templates/prodseller/sellhome.html
@@ -41,7 +41,7 @@
                             <a href="{% url 'prodseller:updatestock' %}" class="nav-item nav-link active"><i class="fa fa-table me-2"></i>Update stock</a>
                             <a href="{% url 'prodseller:currentstock' %}" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Current stock</a>
                             <a href="{% url 'prodseller:sellerpass' %}" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Change password</a>
-                            <a href="{% url 'common:selllogin' %}" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Logout</a>
+                            <a href="{% url 'prodseller:logout' %}" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Logout</a>
                         </div>
                     </nav>
                 </div>
